--- a/src/sass/components/ui.scss
+++ b/src/sass/components/ui.scss
@@ -1,1 +1,7 @@
 @import './button.scss';
+@import './dropdown.scss';
+@import './card.scss';
+@import './modal.scss';
+@import './tabs.scss';
+@import './accordion.scss';
+@import './carousel.scss';
